Safari365 Prod/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ByPassTrigger__c</fullName>
        <label>ByPassTrigger</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OppportunityTrigger</fullName>
                </value>
                <value>
                    <fullName>TH_Quotations</fullName>
                </value>
                <value>
                    <fullName>OPTTriggerHandler</fullName>
                </value>
                <value>
                    <fullName>OPDTriggerHandler</fullName>
                </value>
                <value>
                    <fullName>OSRTriggerHandler</fullName>
                </value>
                <value>
                    <fullName>CTTTriggerHandler</fullName>
                </value>
                <value>
                    <fullName>AccountTriggerHandler</fullName>
                </value>
                <value>
                    <fullName>OpportunityTriggerHandler</fullName>
                </value>
                <value>
                    <fullName>TH_Passenger</fullName>
                </value>
                <value>
                    <fullName>NTSTriggerHandler</fullName>
                </value>
                <value>
                    <fullName>SODTriggerHandler</fullName>
                </value>
                <value>
                    <fullName>PBKTriggerHandler</fullName>
                </value>
                <value>
                    <fullName>TH_ServiceLineItems</fullName>
                </value>
                <value>
                    <fullName>TH_ServiceLineItemChargeType</fullName>
                </value>
                <value>
                    <fullName>TH_PassengerQuotationMapping</fullName>
                </value>
                <value>
                    <fullName>TH_ExposureRoe</fullName>
                </value>
                <value>
                    <fullName>TH_ConsultantTargetMonthly</fullName>
                </value>
                <value>
                    <fullName>TH_Lead</fullName>
                </value>
                <value>
                    <fullName>TH_ConsultantTargetLeadYearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ByPassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPassValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProfileImageUrl__c</fullName>
        <label>ProfileImageUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileUrl__c</fullName>
        <label>ProfileUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Travel_Logic_Username__c</fullName>
        <label>Travel Logic Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile_Intro__c</fullName>
        <description>User Profile Intro for members club</description>
        <label>User Profile Intro</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Working_Since__c</fullName>
        <label>Working Since</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>finance__c</fullName>
        <label>Finance</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>wetu_password__c</fullName>
        <label>Wetu_Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetu_user_id__c</fullName>
        <label>Wetu_UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetu_username__c</fullName>
        <label>Wetu_UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>Location__c</columns>
        <columns>Working_Since__c</columns>
        <columns>ProfileImageUrl__c</columns>
        <columns>ProfileUrl__c</columns>
        <columns>CORE.USERS.FORECAST_ENABLED</columns>
        <columns>wetu_password__c</columns>
        <columns>wetu_user_id__c</columns>
        <columns>wetu_username__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>Location__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Working_Since__c</columns>
        <columns>ProfileUrl__c</columns>
        <columns>ProfileImageUrl__c</columns>
        <columns>CORE.USERS.FORECAST_ENABLED</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Safari5Users</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>safari365.com</value>
        </filters>
        <label>Safari 365 Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>